--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   hooks_riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
+  freezed_annotation: ^2.4.1
+  stop_watch_timer: ^3.1.1
 
 dev_dependencies:
   flutter_test:
